--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ venv/
 env/
 ENV/
 .env/
+translator_env/
 
 # IDE specific files
 .idea/
@@ -40,3 +41,7 @@ credentials.json
 
 # Test files
 test_*.po
+
+# Cache files
+.cache/
+*.cache
